Not show movies tab if not exist movies active

--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -1,7 +1,8 @@
 <%
 
   props = {
-      active: nil
+      active:       nil,
+      movies_count: Movie.select("*").from(Movie.select("*, jsonb_array_elements(dates) as date")).where("(date ->> 'date') > ?", DateTime.now.beginning_of_day).count
   }.deep_merge!(props || {})
 
 %>
@@ -60,15 +61,17 @@
             </span>
             <span class="mdc-tab__ripple"></span>
           </button>
-          <button data-action="click->tab-bar#open" data-tab-path="/porto-alegre/cinema" class="mdc-tab <%= 'mdc-tab--active' if props[:active] == 'movies' %>" role="tab" aria-selected="<%= props[:active] == 'movies' ? 'true' : 'false' %>">
-            <span class="mdc-tab__content">
-              <span class="mdc-tab__text-label">Cinema</span>
-            </span>
-            <span class="mdc-tab-indicator <%= 'mdc-tab-indicator--active' if props[:active] == 'movies' %>">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-            </span>
-            <span class="mdc-tab__ripple"></span>
-          </button>
+          <% if props[:movies_count] > 0 %>
+            <button data-action="click->tab-bar#open" data-tab-path="/porto-alegre/cinema" class="mdc-tab <%= 'mdc-tab--active' if props[:active] == 'movies' %>" role="tab" aria-selected="<%= props[:active] == 'movies' ? 'true' : 'false' %>">
+              <span class="mdc-tab__content">
+                <span class="mdc-tab__text-label">Cinema</span>
+              </span>
+              <span class="mdc-tab-indicator <%= 'mdc-tab-indicator--active' if props[:active] == 'movies' %>">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+              </span>
+              <span class="mdc-tab__ripple"></span>
+            </button>
+          <% end %>
         </div>
       </div>
     </div>
