--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -1,3 +1,11 @@
+<%
+
+props = {
+  movies_count: Movie.select("*").from(Movie.select("*, jsonb_array_elements(dates) as date")).where("(date ->> 'date') > ?", DateTime.now.beginning_of_day).count
+}.deep_merge!(props || {})
+
+ %>
+
 <% if current_user %>
   <div data-controller="bottom-navigation" class="me-bottom-navigation">
     <div class="me-bottom-navigation__items">
@@ -12,17 +20,19 @@
         Eventos
       </span>
       </div>
-      <div data-target="bottom-navigation.item bottom-navigation.cinema" data-action="click->bottom-navigation#goto" data-path="/porto-alegre/cinema" class="me-bottom-navigation__item mdc-ripple-surface">
-        <i class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-            <path d="M18 4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4h-4z"/>
-            <path d="M0 0h24v24H0z" fill="none"/>
-          </svg>
-        </i>
-        <span class="label">
-        Cinema
-      </span>
-      </div>
+      <% if props[:movies_count] > 0 %>
+        <div data-target="bottom-navigation.item bottom-navigation.cinema" data-action="click->bottom-navigation#goto" data-path="/porto-alegre/cinema" class="me-bottom-navigation__item mdc-ripple-surface">
+          <i class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path d="M18 4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4h-4z"/>
+              <path d="M0 0h24v24H0z" fill="none"/>
+            </svg>
+          </i>
+          <span class="label">
+          Cinema
+        </span>
+        </div>
+      <% end %>
       <div data-target="bottom-navigation.item bottom-navigation.search" data-action="click->bottom-navigation#goto" data-path="/busca" class="me-bottom-navigation__item mdc-ripple-surface">
         <i class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
