Adjust in categories page to not load default values

--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -100,4 +100,10 @@
     //  font-weight: 600;
     //}
   }
+
+  .me-chip-set--categories &.mdc-chip--selected {
+    color: $chip-filter-color-active;
+    background-color: $chip-filter-background-active;
+    border: 0;
+  }
 }
