--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -13,14 +13,6 @@
     }
   }
 
-  .me-collection__title-custom & {
-    padding: 0;
-    @include mobile-only {
-      padding: 0 24px 0 16px;
-    }
-  }
-
-
   &__wrapper {
     @include mobile-only {
       overflow-x: scroll;
@@ -30,6 +22,50 @@
       @include mobile-only {
         display: none;
       }
+    }
+  }
+
+  .me-collection__title-custom & {
+    padding: 0;
+    @include mobile-only {
+      padding: 0 24px 0 16px;
+    }
+  }
+
+  .me-filter & {
+    display: block;
+    padding: 0;
+    @include mobile-only {
+      padding: 0 calc(#{$section-padding-phone} - 6px);
+    }
+
+    &::before {
+      @include mobile-only {
+        background: linear-gradient(270deg, white 10%, transparent);
+        position: absolute;
+        z-index: 5;
+        width: 40px;
+        height: 40px;
+        content: close-quote;
+        right: 0;
+        pointer-events: none;
+      }
+    }
+
+    &[data-target="chip.chipset section.ocurrences"] {
+      & .mdc-chip {
+        @include desktop-only {
+          padding: 6px;
+        }
+      }
+    }
+
+    & .material-icons {
+      vertical-align: middle;
+      padding: 0 6px 0 0;
+      color: $font-secondary-color;
+      opacity: 0;
+      transition: opacity 0.2s ease-in;
     }
   }
 
