Adjust style of empty components

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -200,6 +200,7 @@ $description-color: $font-secondary-color;
       color: $surface-secondary-color;
       background-color: $surface-secondary-color;
       width: max-content;
+      margin: 0 0 6px 0;
     }
   }
 
