Add ripple to swippable buttons

--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -314,6 +314,7 @@
     }
 
     & .mdc-button__icon {
+      overflow: hidden;
       @include mdc-button-ink-color($font-tertiary-color);
       @include mdc-states-base-color($border-color);
     }
