--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -37,13 +37,16 @@
     </div>
     <div class="global-actions">
       <button class="mdc-button mdc-button__icon left-action">
+        <div class="mdc-button__ripple"></div>
         <i class="material-icons mdc-button__icon" aria-hidden="true">thumb_down</i>
       </button>
       <button class="mdc-button mdc-button__icon top-action">
   <!--      <i class="material-icons mdc-button__icon" aria-hidden="true">star_rate</i>-->
+        <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label" style="opacity: 0.6">Talvez</span>
       </button>
       <button class="mdc-button mdc-button__icon right-action">
+        <div class="mdc-button__ripple"></div>
         <i class="material-icons mdc-button__icon" aria-hidden="true">thumb_up</i>
       </button>
     </div>
