Add ripple to chips in follow topics

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -171,6 +171,7 @@
             <div class="me-chip-set mdc-chip-set">
               <% current_user&.following_topics.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
                 <a href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| current_user&.last_sign_in_at < event.created_at } %>">
+                  <div class="mdc-chip__ripple"></div>
                   <%= topic.details_name.titleize %>
                   <i class="me-chip__counter"><%= topic.events.active.size %></i>
                 </a>
