--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -52,6 +52,12 @@
     }
   }
 
+  &--condensed {
+    @include mobile-only {
+      margin: 1px 0;
+    }
+  }
+
   &--full-height {
     min-height: 80vh;
   }
