--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -36,6 +36,7 @@ $border-color: #e0e0e0;
     & .mdc-top-app-bar__row {
       @include mobile-only {
         padding: 0 12px;
+        height: 70px;
       }
     }
   }
