--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -3,7 +3,7 @@
   <%= notice %>
 
   <% unless @events_found&.suggestions.blank? %>
-    <section class="me-section" style="margin: 0 auto 25px auto;">
+    <section class="me-section me-section--condensed" style="margin: 0 auto 25px auto;">
       <div class="me-section__inner">
         <div class="me-section-head">
           <h2>Você quis dizer?</h2>
@@ -22,7 +22,7 @@
   <% end %>
 
   <% if @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-    <section class="me-section">
+    <section class="me-section me-section--condensed">
       <div class="me-section__inner">
         <%= render partial: "components/collection/collection", locals: {
             data:  @data,
@@ -33,13 +33,13 @@
       </div>
     </section>
   <% elsif @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter == 0 } %>
-    <section class="me-section" style="margin: 0 auto 25px auto;">
+    <section class="me-section me-section--condensed" style="margin: 0 auto 25px auto;">
       <div class="me-section__inner">
         <h2 class="me-section__title">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
       </div>
     </section>
   <% else %>
-    <section class="me-section">
+    <section class="me-section me-section--condensed">
       <div class="me-section__inner">
         <h2 class="me-section__title">Pessoas</h2>
         <%= render partial: "components/user_suggestions", locals: {
@@ -49,7 +49,7 @@
         } %>
       </div>
     </section>
-    <section class="me-section">
+    <section class="me-section me-section--condensed">
       <div class="me-section__inner">
         <h2 class="me-section__title">Categorias</h2>
         <div class="me-chip-set__wrapper">
