--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -14,6 +14,7 @@ $box-shadow: 0 0 45px rgba(0, 0, 0, 0.20);
   border-radius: 36px;
   padding: 12px 16px;
   height: auto;
+  overflow: hidden;
   @include mobile-only {
     padding: 16px 18px;
   }
