--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -12,6 +12,7 @@
   top: 0;
   z-index: 5;
   box-shadow: 0 0 3px #00000030;
+  box-shadow: 0px 1px 6px 1px #00000030;
   @include desktop-only {
     z-index: 3;
     padding: 0 0 0 73px;
@@ -20,6 +21,7 @@
   @include mobile-only {
     @include mdc-tab-bar-density(-1);
     top: 0;
+    margin-bottom: 3px;
   }
 
   & .mdc-tab {
