--- a/web/app/assets/stylesheets/components/me-collection.scss
+++ b/web/app/assets/stylesheets/components/me-collection.scss
@@ -85,6 +85,11 @@
     }
   }
 
+  &__container {
+    transition: opacity 400ms ease;
+    will-change: opacity;
+  }
+
   &__title-secondary {
     font-size: 16px;
     display: block;
