Adjust in animations for tab bar component

--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -37,7 +37,7 @@
       </section>
     </section>
   <% else %>
-    <div class="me-section">
+    <div class="me-section me-section--full-height">
       <div class="me-section__inner">
         <div class="me-info">
           <div class="me-info__content">
