--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -16,6 +16,8 @@ $font-secondary-family: 'Roboto', sans-serif;
 
 $section-padding-phone: 24px;
 
+$tab-bar-shadow: 0px 1px 6px 1px #00000030;
+
 @mixin section {
   max-width: 95%;
   padding: 0 0 0 10%;
