--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -78,7 +78,7 @@
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
-                <%= recaptcha_v3(action: 'sign_up') %>
+                <%= recaptcha_v3(action: 'sign_up') if Rails.env == :production %>
               </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid--align-right">
@@ -115,4 +115,3 @@
     </div>
   </div>
 </section>
-
