--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -107,35 +107,37 @@
           <!--          </span>-->
         <% end %>
       </section>
-      <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
-        <div class="me-search-field me-search-field mdc-text-field mdc-text-field--with-leading"
-             data-controller="search"
-             data-target="search.search"
-             data-turbolinks-permanent>
-          <form action="/busca"
-                method="get"
-                name="search"
-                style="width: 100%">
-            <i class="material-icons mdc-text-field__icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path fill="none" d="M0 0h24v24H0V0z"/>
-                <path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-              </svg>
-            </i>
-            <input autocomplete="false"
-                   name="q"
-                   class="mdc-text-field__input"
-                   id="text-field-shape-one"
-                   placeholder="O que você está buscando hoje?"
-                   type="text"
-                   data-target="search.input">
-            <input class="me-button mdc-button"
-                   type="submit" value="Buscar"
-                   data-target="search.submit"
-                   data-action="click->search#searching"/>
-          </form>
-        </div>
-      </section>
+      <% unless ['bot'].include?(params[:controller]) %>
+        <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
+          <div class="me-search-field me-search-field mdc-text-field mdc-text-field--with-leading"
+               data-controller="search"
+               data-target="search.search"
+               data-turbolinks-permanent>
+            <form action="/busca"
+                  method="get"
+                  name="search"
+                  style="width: 100%">
+              <i class="material-icons mdc-text-field__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                  <path fill="none" d="M0 0h24v24H0V0z"/>
+                  <path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+                </svg>
+              </i>
+              <input autocomplete="false"
+                     name="q"
+                     class="mdc-text-field__input"
+                     id="text-field-shape-one"
+                     placeholder="O que você está buscando hoje?"
+                     type="text"
+                     data-target="search.input">
+              <input class="me-button mdc-button"
+                     type="submit" value="Buscar"
+                     data-target="search.submit"
+                     data-action="click->search#searching"/>
+            </form>
+          </div>
+        </section>
+      <% end %>
     <% end %>
     <section
       class="me-top-app-bar__section me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
